--- a/templates/hosts.html
+++ b/templates/hosts.html
@@ -8,6 +8,9 @@ block head %} {{ super() }}
 
 <section class="page-header">
   <h1>🌍 Hosts / IPs Atacantes</h1>
+  <p class="log-info">
+      📄 Archivo analizado: <strong>{{ log_name }}></strong>
+    </p>
   <p>Listado detallado de direcciones IP detectadas con actividad sospechosa</p>
 </section>
 
