Cambio fichero lectura

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,9 +80,7 @@
         <p>&copy; 2025 Panel de Seguridad. Todos los derechos reservados.</p>
         <p>
           Contacto:
-          <a href="mailto:jcm201080@gmail.com">
-            jcm201080@gmail.com
-          </a>
+          <a href="mailto:jcm201080@gmail.com"> jcm201080@gmail.com </a>
         </p>
         {% endblock %}
       </footer>
