--- a/templates/graficas.html
+++ b/templates/graficas.html
@@ -9,9 +9,7 @@ endblock %} {% block head %} {{ super() }}
 {% endblock %} {% block content %}
 <section class="dashboard-header">
   <h1>📊 Gráficas de Seguridad</h1>
-  <p class="log-info">
-      📄 Archivo analizado: <strong>{{ log_name }}</strong>
-    </p>
+  <p class="log-info">📄 Archivo analizado: <strong>{{ log_name }}</strong></p>
   <p>Visualización de patrones y amenazas detectadas</p>
 </section>
 
