--- a/templates/host_detail.html
+++ b/templates/host_detail.html
@@ -8,9 +8,7 @@ block head %} {{ super() }}
 
 <section class="page-header">
   <h1>🔎 Detalle del Host</h1>
-  <p class="log-info">
-      📄 Archivo analizado: <strong>{{ log_name }}></strong>
-    </p>
+  <p class="log-info">📄 Archivo analizado: <strong>{{ log_name }}></strong></p>
   <p>Análisis detallado de la dirección IP seleccionada</p>
 </section>
 
