--- a/static/css/styles_cabecera.css
+++ b/static/css/styles_cabecera.css
@@ -12,6 +12,9 @@ body {
   background-color: #f4f6f9;
   color: #333;
   height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* ===========================
