--- a/templates/base.html
+++ b/templates/base.html
@@ -77,15 +77,13 @@
 
       <!-- ================= FOOTER ================= -->
       <footer class="app-footer">
-        {% block footer %}
-        <p>© 2025 JCM Ciberseguridad</p>
-            <div class="brand">
-                <img src="{{ url_for('static', filename='img/jcmweb.svg') }}" alt="JCMWEB logo">
-                <a href="https://jesuscmweb.com" target="_blank">JESUSCMWEB</a>
-            </div>      
-
-        {% endblock %}
+          <p>© 2025 JCM Ciberseguridad</p>
+          <div class="brand">
+              <img src="{{ url_for('static', filename='img/jcmweb.svg') }}" alt="JCMWEB logo">
+              <a href="https://jesuscmweb.com" target="_blank">jesuscmweb.com</a>
+          </div>
       </footer>
+
     </div>
   </body>
 </html>
