--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,8 @@
           <li><a href="{{ url_for('export.export') }}">Exportación</a></li>
           <li><a href="{{ url_for('graficas.graficas') }}">Gráficas</a></li>
           <li><a href="{{ url_for('upload.upload_log') }}">Subir log</a></li>
+          <li><a href="{{ url_for('funcionamiento.funcionamiento') }}">Funcionamiento</a></li>
+
           <hr />
 
           {% if session.get("user") %}
