--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,13 @@
         <button type="submit">Entrar</button>
       </form>
 
+      <div class="demo-box">
+          <strong>Modo demo:</strong><br>
+          Usuario: <code>demo</code><br>
+          Contraseña: <code>demo123</code>
+      </div>
+
+
       {% if error %}
       <p class="error">{{ error }}</p>
       {% endif %}
