--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
           <li><a href="{{ url_for('export.export') }}">Exportación</a></li>
           <li><a href="{{ url_for('graficas.graficas') }}">Gráficas</a></li>
           <li><a href="{{ url_for('upload.upload_log') }}">Subir log</a></li>
-          <li><a href="{{ url_for('simulacion.simulacion') }}">🧪 Simulación</a></li>
+          <li><a href="{{ url_for('simulacion.simulacion') }}">Simulación</a></li>
           <li><a href="{{ url_for('funcionamiento.funcionamiento') }}">Funcionamiento</a></li>
 
           <hr />
